@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-13T16:17:47Z",
-  "count_outdated" : 759,
-  "uniques_outdated" : 434,
+  "timestamp" : "2023-08-14T01:06:25Z",
+  "count_outdated" : 762,
+  "uniques_outdated" : 436,
   "count" : 785,
   "uniques" : 454,
   "clones" : [
-    {
-      "timestamp": "2023-07-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-07-31T00:00:00Z",
       "count": 1,
