@@ -1,12 +1,7 @@
 {
-  "count": 24,
+  "count": 23,
   "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2023-07-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-31T00:00:00Z",
       "count": 1,
